welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:3: error: ';' expected but 'if' found.
	}if(outsideMode){
         ^in1To10:19: error: expected class or object definition
def in110(c:Int):Boolean = {
^in1To10:34: error: Unmatched closing brace '}' ignored here
 }
 ^