welcome.lessons.welcome.bat.bool2.In1To10.scala.code
def in1To10(n:Int, outsideMode:Boolean):Boolean = {

	}if(outsideMode){
		if( n == 1 || n < 1 ){
			return true;
		}
		if( n == 10 || n > 1 ){
			return true;
		}else{
			return false;
		}
	}
}





def in110(c:Int):Boolean = {
	if (c == 1){
		return true;
	}else{
		if (c == 10){
			return true;
		}else{
			if( c<10 && c>1){
				return true;
			}else{
				return false;
			}
		}
	}
}